# mcp-memory

./: .coverage  .coveragerc  .gitignore  AGENTS.md  DESCRIPTION.md  GLOBAL_PLAN.md  README.md  pyproject.toml
.codex/: config.toml
artifacts/: coverage.json  coverage.step.stderr.txt  coverage.step.stdout.txt  coverage.txt  coverage.xml  http-api.stderr.txt  local_checks.stdout.txt  local_checks.txt  mcp.stderr.txt  smoke_export.json  ui-home-launch.stderr.txt  ui-home.stderr.txt
docs/: design-prompt.md  dns-path-gateway.md  future-plans.md  generic-knowledge-refactor-plan.md  modules.md  redesign-plan.md  refactor-phase-01-schema-storage.md  refactor-phase-02-generic-core.md  refactor-phase-03-project-cli-transfer.md  refactor-phase-04-http-mcp.md  refactor-phase-05-gui.md  refactor-phase-06-tests-verification.md  release-0.3.0.md  release-0.8.0.md  release-1.0.0.md  temporary-release-roadmap.md  ui-redesign-implementation-plan.md
scripts/: local_smoke_check.py  release_check.py  run_coverage.ps1  run_local_checks.ps1  run_phase10_checks.ps1  run_phase11_checks.ps1  run_phase1_checks.ps1  run_phase2_checks.ps1  run_phase3_checks.ps1  run_phase4_checks.ps1  run_phase5_checks.ps1  run_phase6_checks.ps1  run_phase7_checks.ps1  run_phase8_checks.ps1  run_phase9_checks.ps1  run_release_check.ps1
tests/: support.py  test_api_server.py  test_bootstrap_structure.py  test_config_cli.py  test_coverage_targets.py  test_generic_records.py  test_gui_assets.py  test_gui_home.py  test_logging_runtime.py  test_mcp_sdk_server.py  test_mcp_server.py  test_runtime_manager.py  (+3 more)
(+90 files in other folders)
