[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-memory"
version = "0.1.0"
description = "Offline-first RE knowledge base with SQLite-backed storage."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["coverage>=7,<8"]

[project.scripts]
mcp-memory = "mcp_memory.cli.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mcp_memory.gui" = ["assets/*.css", "assets/*.js"]
