[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-memory"
version = "1.0.0"
description = "Offline-first schema-driven knowledge base for people and agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["Jinja2>=3.1,<4"]

[project.optional-dependencies]
dev = ["coverage>=7,<8"]

[project.scripts]
mcp-memory = "mcp_memory.cli.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"mcp_memory.gui" = ["assets/*.css", "assets/*.js", "templates/*.html"]
"mcp_memory.schemas" = ["*.schema.json"]
